working on l&D page

--- a/l&d.html
+++ b/l&d.html
@@ -44,10 +44,14 @@
 	  	<div class="content">
 			<div class="context-summary">
 			<div class="context-title">Context</div>
-				During my summer at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> as a UX Design Intern, I was tasked with redesigning the Learning and Development Portal: a website through which Deloitte Digital practitioners can request to attend external continuing education (CED) opportunities such as conferences and trainings.
+				During my summer at <a href="https://www.deloittedigital.com/">Deloitte Digital</a> as a UX Design Intern, I redesigning the Learning and Development Portal: a website through which Deloitte Digital practitioners can request to attend external continuing education (CED) opportunities such as conferences and trainings.
 				<p>
 				I had full ownership over this project: I created my own project plan and timeline, I decided what methods and tools I wanted to use and learn, and I headed all the group efforts that went into the project.
 				</p>
+				<p>
+				Through my work, I made requesting education opportunities easier and more transparent for practitioners and better informed leadership on budget decisions.
+				</p>
+
 			</div>
 			
 			<div class="context-specifics">
@@ -55,9 +59,9 @@
 					<div class="context-description">
 					The Learning team is made up of three others: a product manager, project manager, and senior manager.</div>
 				<div class="context-subtitle">Skills</div> 
-					<div class="context-description">Heuristic Evaluations, Interviewing, Affinity Mapping, User testing, Wireframing, Prototyping, Presenting</div>
+					<div class="context-description">Heuristic Evaluation, Interviewing, Usability Testing, Affinity Mapping, Product Visioning, Personas, User Stories, Business Process Modeling, Information Architecture, Wireframing, Prototyping, Presenting</div>
 				<div class="context-subtitle">Tools</div> 
-					<div class="context-description">Adobe InDesign, Sketch, PowerPoint, A lot of sticky notes</div>
+					<div class="context-description">Adobe InDesign, Sketch, InVision, PowerPoint, A lot of sticky notes</div>
 			</div>
 	  	</div>
 
@@ -68,7 +72,7 @@
 		</div>
 
 	  	<div class="section-title">PROCESS</div>
-	  	<div class="panel">I followed the classic double-diamond process for this 8-week project, splitting each phase into roughly a two-week sprint. In the 'Discover' phase, I did a Heuristic Evaluation of the existing portal and conducted 20 interviews and 2 usability tests with users and stakeholders. In 'Define,' I worked with a team to create an Affinity Map from nearly 400 statements gathered from research. We also completed a project visioning session, and I created personas and user stories. I kicked off 'Develop' with a Crazy 8s session, and eventually worked through several iterations of wireframes and prototypes. In 'Deploy,' I created a style guide and began to work through visual designs for screens.</div>
+	  	<div class="panel">I followed the classic double-diamond process for this 6-week project, splitting each phase into roughly a two-week sprint. In the 'Discover' phase, I did a Heuristic Evaluation of the existing portal and conducted 20 interviews and 2 usability tests with users and stakeholders. In 'Define,' I worked with a team to create an Affinity Map from nearly 400 statements gathered from research. We also completed a product visioning session, and I created personas and prioritized user stories. I kicked off 'Develop' with a Crazy 8s session, and eventually worked through several iterations of wireframes and prototypes. In 'Deploy,' I interviewed the developer who will be taking this project forward, created a style guide, and began to work through visual designs for screens.</div>
 
 		<div class="process-title">Heuristic Evaluation</div>
 		<div class="panel">
@@ -81,12 +85,14 @@
 		<div class="process-title last">Interviews</div>
 		<div class="panel">
 		<p>
-		Before speaking to anyone, I determined <a href="">who</a> I needed to talk to in order to cover all potential user and stakeholder groups and created a <a href="">script</a>. Throughout one week, I interviewed ___X___ users, ___X___ of whom are general users, ___X___ of whom are approvers, and ___X___ of whom are leadership.
+		Before speaking to anyone, I determined <a href="">who</a> I needed to talk to in order to cover all potential user and stakeholder groups and created a <a href="">script</a>. I divided the specific questions into general categories - Continuing Education, Approval Process, and Existing Portal. I knew it was important not to constrain myself by rigorously following a list of questions during interviews, so I used them as a starting off point and allowed the interviews to feel more like conversations. 
+		<p>
+		Throughout one week, I interviewed 20 individuals: 9 requesters, 5 approvers, 3 administrators, 2 developers, and 1 talent representative.
 		<p>
 		These were some insightful quotes from interviews:
-		<li>Something!</li>
-		<li>Goes!</li>
-		<li>Here!</li>
+		<li>"I want to become a better developer through different trainings and conferences and bring back new ideas, methodologies, and concepts to the studio."</li>
+		<li>"When I look to do training, there are enough barriers that prevent me from really working hard to try. It doesn't come up in regular conversation or emails, and I don't know how to apply - it seems like a lot of money and I'm not sure how to bring it up to my counselor."</li>
+		<li>"There really aren't any defined bounds - a certain amount of money is set aside for each person, but we will still approve a lot of requests above that amount since a lot of people don't take advantage of their allocated money"</li>
 		</p>
 		</p>
 		</div>
@@ -94,12 +100,29 @@
 		<div class="process-title">Usability Testing</div>
 		<div class="panel">
 		<p>
-		I didn't want to spend too much time testing the existing system because I anticipated completely starting from scratch, so I only did usability testing with two people. I also created a <a href="">script</a> in preparation, and what I observed helped me gain a better understanding of some of the pain points.
+		I didn't want to spend too much time testing the existing system because I anticipated completely starting from scratch, so I only did usability testing with two people. I also created a <a href="">script</a> in preparation, and what I observed helped me gain a better understanding of some of the pain points. Below are screens from the original site that users were navigating through this.
+	  	<div id="secondary-pics">
+	  		<img class="pics-2" src="pics/l&d/map1.jpeg">
+			<img class="pics-2" src="pics/l&d/map1.jpeg">
+		</div>
 		</p>
 		</div>
 
 		<div class="process-title">Affinity Mapping</div>
 		<div class="panel">
+			In order to identify underling needs and perspectives among the diverse perspectives of the interviewees, a team of UX designers and Product Managers extracted salient points from the interviews into almost 400 individual user notes. Each individual note constitutes a single belief, experience, opinion, concern or need.
+			<p>
+			In total, we identified six top-level categories that highlight user needs and perspectives in a way that informs product development:
+			<li><b>Balancing</b> the amount of transparency surrounding the site, approval process, and budget</li>
+			<li><b>Learning</b> on an individual basis and for Deloitte Digital as a whole</li>
+			<li><b>Supporting</b> practitioners as they go through the request process</li>
+			<li>A <b>tailored</b> experience for each request</li>
+			<li><b>Analytics</b> provide insight into the budget</li>
+			<li><b>Accessibility</b> is vital for a growing user base</li>
+			</p>
+			<p>
+			Read on for an overview of the process that allowed us to pull those insights from the research or <a href="">download the full report here.</a>
+			</p>
 			  <img src="pics/l&d/map1.jpeg" class="med-pic">
 			  <div class="inner-text">
 			  	After organizing and printing out 381 slips of paper with insights and interview quotes, we sorted them into "Level 3" groupings - the most specific supporting details. Initially, we used a word or phrase to describe each grouping, but by the end of this session, we had converted each phrase into an I-statement.
@@ -112,39 +135,124 @@
 
 			  <img src="pics/l&d/wtw.jpeg" class="med-pic">
 			  <div class="inner-text">
-			  	Once we had finalized the groupings, we invited everyone in Deloitte Digital to "Walk the Wall," an exercise through which stakeholders review the finished diagram and leave notes that fall under three categories - key insights, questions, and design ideas.
+			  	Once we finalized the groupings, we invited everyone in Deloitte Digital to "Walk the Wall," an exercise through which stakeholders review the finished diagram and leave notes that fall under three categories - key insights, questions, and design ideas.
+			  	<p>
+			  	After annotations had been added, the final picture that emerges is an interplay of sorted data with reactions and analysis of that data.
+			  	</p>
 			  </div>
 		</div> 
 
 		<div class="last">
-		<div class="process-title">Project Visioning Session</div>
-		<div class="panel">
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</div>
-		</div>
-
 		<div class="process-title">Personas</div>
 		<div class="panel">
-		Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+			From the numerous interview subjects, four categories stuck out: Requesters, Approvers, Administrators, and Leadership. Each has a distinct role and goals:
+			<p>
+			<b>Alex | Requester | UX Designer at Deloitte Digital | <a href="">Full Profile</a></b>
+			<p>"I want to make the most of my continuing education opportunities, but I don't know how to start"</p>
+			<p>
+				Goal: Alex wants to sharpen her skills through continuing education opportunities to remain competitive in the market and contribute meaningfully to her project at work.
+			</p>
+			</p>
+			
+			<p>
+			<b>Kevin | Approver | Engineering Manager at Deloitte Digital | <a href="">Full Profile</a></b>
+			<p>"I usually know what's best for my counselees, but sometimes I need help making that call"</p>
+			</p>
+			<p>
+			Goal: Kevin wants to have confidence in his request decisions and serve the needs of his counselees.	
+			</p>
+
+			<p>
+			<b>Andrew | Administrator | Learning & Development Lead at Deloitte Digital | <a href="">Full Profile</a></b>
+			<p>"I care about what's best for the studio, but I struggle to do that without analytics tools"</p>
+			<p>Goal: Drew wants to keep the studio on track in terms of both budget and learning.</p>
+			</p>
+
+			<p>
+			<b>Karen | Leadership | Service Line Lead at Deloitte Digital | <a href="">Full Profile</a></b>
+			<p>"I want every practitioner to have an equal opportunity to learn and grow"</p>
+			<p>
+				Goal: Karen wants practitioners to strengthen their skills through continuing education opportunities so that the studio maintains its eminence.
+			</p>
+			</p>
+		</div>
 		</div>
 
 		<div class="process-title">User Stories</div>
-		At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+		<div class="panel">
+		  <img src="pics/l&d/map2.jpeg" class="med-pic">
+		  <div class="inner-text">
+		  	The next logical step was to create prioritized user stories for each user group. View the full document <a href="">here.</a>
+		  </div>
+		</div>
+
+		<div class="last">
+			<div class="process-title">Product Visioning Session</div>
+			<div class="panel">
+				<p>
+					Having synthesized most of the qualitative data, the next step was to create a broad vision for the portal in order to brainstorm and prioritize specific features - this was my way of bridging the gap between research and design.
+				</p>
+
+				<img src="pics/l&d/prodvis.jpeg" class="med-pic">
+				<div class="inner-text">		
+					<p>
+					The goal of the session was to brainstorm and prioritize requirements for delivering on the product vision, and to establish a cohesive vision that aligns with user needs and business goals.
+					</p>
+					<p>
+					I led the session, and several stakeholders, including all of the administrators and the head of the Deloitte Digital studio, were in attendance. I followed the <a href="http://www.romanpichler.com/tools/vision-board"> Product Vision Board</a> framework. View the completed board <a href="">here.</a>
+					</p>
+				</div>
+				
+				<p>
+					<p class="last">These were the ultimate vision statements we came up with:</p>
+					<li>For Customer & Marketing practitioners who are focused on learning and development, our product is a tool that provides transparency and guidance into getting approval for the learning opportunities they desire to advance their careers.
+					</li>
+					<li>For leadership who must make informed decisions, our product is a workflow and dashboard solution that provides insight into how to make the best use of the limited fiscal and temporal resources afforded to Customer & Marketing.
+					</li>
+				</p>
+			</div>
+		</div>
+
+		<div class="process-title last">Business Process Modeling</div>
+
 		<div class="panel">
 		</div>
 
 		<div class="process-title">Wireframes</div>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		<div class="panel">
+
+		  <img src="pics/l&d/crazy8.jpg" class="med-pic">
+		  <div class="inner-text">
+			There are three separate levels of unique screens. Shown is my initial brainstorm for the requester landing page.
+			<p>Requester:</p>
+				<li>Landing page - Requests (their own)</li>
+				<li>FAQ</li>
+				<li>Request Form</li>
+			<p>Approver:</p>
+				<li>Landing page - Requests (with requests they have to approve)</li>
+				<li>Request details</li>
+			<p>Administrator:</p>
+				<li>Dashboard</li>
+			<p>
+		  	I began each screen design with a Crazy 8s brainstorm, then I moved to a few full screen sketches that incorporated the best ideas, and finally to mid-fi digital screens in Sketch. Once I finished my first iteration of screens, I had several senior designers review my work. Below are some of the finalized requester screens.</p>
+
+		  </div>
+
+		  	<div id="secondary-pics">
+		  		<p>Download the full PDF with every screen <a href="">here,</a> which contains detailed reasoning behind every design decision, backed up by research findings and/or best practices.</p>
+		  		<img class="pics-3" src="pics/newstagram/explore1.png">
+				<img class="pics-3" src="pics/newstagram/explore2.png">
+				<img class="pics-3" src="pics/newstagram/explore3.png">
+			</div>
 		</div>
 
-		<div class="process-title">Prototype</div>
-		Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+		<div class="process-title last">Prototype & Usability Testing</div>
+			I moved the screens into InVision to create an interactive, semi-functional prototype. I then conducted 2 usability tests, following the same script as my initial tests, to compare how the new screens stacked up.
 		<div class="panel">
 		</div>
 
 		<div class="process-title">Visual Design</div>
-		At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+		TBD
 		<div class="panel">
 		</div>
 
