working on l&D page

--- a/l&d.html
+++ b/l&d.html
@@ -76,9 +76,10 @@
 
 		<div class="process-title">Heuristic Evaluation</div>
 		<div class="panel">
-			<img src="pics/l&d/map1.jpeg" class="med-pic">
+			<img src="pics/l&d/heuristic2.jpeg" class="med-pic">
 		 	 <div class="inner-text">
-		  	My first step in understanding the existing portal was to evaluate it based on <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">Nielsen's ten heuristics</a>. Going through this process helped me pick apart major issues with the site and allowed me to familiarize myself with its features so I was better prepared going into interviews. View the full report <a href="">here</a>.
+		  	My first step in understanding the existing portal (and ripping it to shreds) was to evaluate it based on <a href="https://www.nngroup.com/articles/ten-usability-heuristics/">Nielsen's ten heuristics for usability</a>. Going through this process helped me pick apart major issues with the site and allowed me to familiarize myself with its features so I was better prepared going into interviews. 
+		  	<p>I started by printing out all the pages I want to evaluate and circling features or functionality that seemed flawed. I then went back through and categorized each flaw. View the full report <a href="">here</a>.</p>
 		  	</div>
 		</div>
 
@@ -97,20 +98,21 @@
 		</p>
 		</div>
 
-		<div class="process-title">Usability Testing</div>
+		<div class="process-title">Initial Usability Testing</div>
 		<div class="panel">
-		<p>
-		I didn't want to spend too much time testing the existing system because I anticipated completely starting from scratch, so I only did usability testing with two people. I also created a <a href="">script</a> in preparation, and what I observed helped me gain a better understanding of some of the pain points. Below are screens from the original site that users were navigating through this.
+		I didn't want to spend too much time testing the existing system because I anticipated completely starting from scratch, so I only did usability testing with two people. I also created a <a href="">script</a> in preparation, and what I observed helped me gain a better understanding of some of the pain points. Below are screens from the original site that users were navigating.
 	  	<div id="secondary-pics">
 	  		<img class="pics-2" src="pics/l&d/map1.jpeg">
 			<img class="pics-2" src="pics/l&d/map1.jpeg">
 		</div>
+		<p>
+		After each session, I had a user fill out the <a href="">System Usability Scale</a> to benchmark the current system so I could go back and compare my later results. The score for the requester portal was __X__, and the score for the admin portal was __X__.
 		</p>
 		</div>
 
 		<div class="process-title">Affinity Mapping</div>
 		<div class="panel">
-			In order to identify underling needs and perspectives among the diverse perspectives of the interviewees, a team of UX designers and Product Managers extracted salient points from the interviews into almost 400 individual user notes. Each individual note constitutes a single belief, experience, opinion, concern or need.
+			In order to identify underlying needs and perspectives among the diverse group of interviewees, I led a team of UX designers and Product Managers in extracting salient points from the interviews into almost 400 individual user notes. Each individual note constitutes a single belief, experience, opinion, concern or need.
 			<p>
 			In total, we identified six top-level categories that highlight user needs and perspectives in a way that informs product development:
 			<li><b>Balancing</b> the amount of transparency surrounding the site, approval process, and budget</li>
@@ -168,22 +170,12 @@
 			<p>Goal: Drew wants to keep the studio on track in terms of both budget and learning.</p>
 			</p>
 
-			<p>
 			<b>Karen | Leadership | Service Line Lead at Deloitte Digital | <a href="">Full Profile</a></b>
 			<p>"I want every practitioner to have an equal opportunity to learn and grow"</p>
 			<p>
 				Goal: Karen wants practitioners to strengthen their skills through continuing education opportunities so that the studio maintains its eminence.
 			</p>
-			</p>
 		</div>
-		</div>
-
-		<div class="process-title">User Stories</div>
-		<div class="panel">
-		  <img src="pics/l&d/map2.jpeg" class="med-pic">
-		  <div class="inner-text">
-		  	The next logical step was to create prioritized user stories for each user group. View the full document <a href="">here.</a>
-		  </div>
 		</div>
 
 		<div class="last">
@@ -213,9 +205,20 @@
 			</div>
 		</div>
 
-		<div class="process-title last">Business Process Modeling</div>
-
+		<div class="process-title">User Stories</div>
 		<div class="panel">
+		  <img src="pics/l&d/map2.jpeg" class="med-pic">
+		  <div class="inner-text">
+		  	The next logical step was to create prioritized user stories for each user group. View the full document <a href="">here.</a>  
+		  	<p>Creating these user stories helped me flesh out the specific features that we identified through product visioning, identify which features belonged on which page, and draw the line between MVP features and nice-to-haves.</p>
+		  </div>
+		</div>
+
+		<div class="process-title last">Business Process Modeling</div>
+		<div class="panel">
+		The current approval process is a one-size-fits all process that is in no way tailored to the request or user. So, an essential piece of this portal redesign was also redesigning the underlying process behind the portal. I started by breaking up the process into two user groups, by practitioner level: Analysts - Senior Consultants, and Managers and above. At the Manager level, it is likely that your counselor is an administrator, which creates redundancies. 
+		<p>The second big divide that needed to be addressed was cost - inexpensive requests like a $10 online course should not have to go through several levels of approval, rather, they can be auto-approved if the practitioner is below a certain threshold. I took these issues, as well as several other factors, when creating the flow below.</p>
+		<img src="pics/newstagram/streamspurple.jpg" class="big-pic">
 		</div>
 
 		<div class="process-title">Wireframes</div>
